# FAWN

./: README.md
.devcontainer/: devcontainer.json
fawn_workspace/: Cargo.toml
fawn_workspace/cmd/: client_cmds.rs
fawn_workspace/config/: backend.toml  frontend.toml
fawn_workspace/fawn_backend/: Cargo.toml
fawn_workspace/fawn_backend/src/: chunked_file_store.rs  lib.rs  main.rs  meta.rs  rpc_handler.rs  server.rs  service.rs  stage.rs
fawn_workspace/fawn_backend/src/config/: backend.config
fawn_workspace/fawn_backend/src/storage/: mod.rs
fawn_workspace/fawn_backend/src/storage/logstore/: compaction.rs  log_store.rs  mod.rs  pointer.rs  segment.rs
fawn_workspace/fawn_backend/test/: backend1.config  backend2.config  backend3.config  backend4.config  backend5.config  clean.sh  config.json
fawn_workspace/fawn_backend/test/storage/: 0000000000000000.ftr
fawn_workspace/fawn_backend/tests/: test_file_store.rs
fawn_workspace/fawn_client/: Cargo.toml
fawn_workspace/fawn_client/src/: client.rs  client_factory.rs  lib.rs  main.rs  storage.rs  test_client.rs
fawn_workspace/fawn_common/: Cargo.toml  build.rs
fawn_workspace/fawn_common/proto/: fawn_api.proto  fawn_backend_api.proto  fawn_frontend_api.proto
fawn_workspace/fawn_common/src/: config.rs  err.rs  fawn_api.rs  fawn_backend_api.rs  fawn_frontend_api.rs  lib.rs  types.rs  util.rs
fawn_workspace/fawn_frontend/: Cargo.toml
fawn_workspace/fawn_frontend/src/: backend_manager.rs  lib.rs  main.rs  node.rs  rpc_handler.rs  server.rs  service.rs  types.rs
fawn_workspace/fawn_frontend/src/config/: frontend1.config  frontend2.config
fawn_workspace/fawn_frontend/test/: front_1.config  front_2.config
fawn_workspace/fawn_logstore/: Cargo.toml
fawn_workspace/fawn_logstore/src/: lib.rs  log_store.rs  record.rs  segment.rs
