[package]
name = "fawn_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
fawn_common = { path = "../fawn_common" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
tempfile = "3"
sha2     = "0.10"   # only for ChunkedFileStore test
memmap2 = "0.9.5"   # for memory-mapped files in logstore
crc32fast = "1"     # CRC-32C checksum for logstore
byteorder = "1"     # handy LE helpers for logstore
