[package]
name = "fawn_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
fawn_common = { path = "../fawn_common" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
tempfile = "3"
sha2     = "0.10"   # only for ChunkedFileStore test
memmap2 = "0.9.5"   # for memory-mapped files in logstore
crc32fast = "1"     # CRC-32C checksum for logstore
byteorder = "1"     # handy LE helpers for logstore
tonic = "0.11"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
futures-core = "0.3"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "inspect_log"
path = "bin/inspect_log.rs"